--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,5 +26,6 @@ export(nlpost_bod2)
 export(nlpost_gomp)
 export(nlpost_lub)
 export(nlpost_rebin)
+import(Rcpp)
 importFrom(coda,mcmc)
 useDynLib(iLaplaceExamples)
